# week-2-mon-lab-Timofey-Gumennyy

./: .clang-format  CMakeLists.txt  Makefile  README.md  Student.cpp  Student.hpp  lab-1-part-b.cpp  run.bat  test.bat
.github/workflows/: classroom.yml
